# Flight-Gear-Interpreter

./: CMakeLists.txt  DataReaderServer.cpp  DataReaderServer.h  README.md  TODO  User.cpp  User.h  main.cpp  small_generics.xml
Commands/: Command.h  ConnectCommand.cpp  ConnectCommand.h  DefineVarCommand.cpp  DefineVarCommand.h  EntercCommand.cpp  EntercCommand.h  ExitCommand.cpp  ExitCommand.h  IfCommand.cpp  IfCommand.h  LoopCommand.cpp  LoopCommand.h  OpenServerCommand.cpp  OpenServerCommand.h  PrintCommand.cpp  PrintCommand.h  RunCommand.cpp  RunCommand.h  SleepCommand.cpp  SleepCommand.h
Expressions/: BinaryExpression.h  Div.h  Expression.h  Minus.h  Mult.h  Neg.h  Number.h  Plus.h
Utils/: CheckClass.cpp  CheckClass.h  ConditionParser.cpp  ConditionParser.h  ShuntingYard.cpp  ShuntingYard.h  SymbolTable.cpp  SymbolTable.h
